--- a/styles.scss
+++ b/styles.scss
@@ -1,2 +1,6 @@
 @import './sass/variables';
-@import './sass/upload';
+@import './sass/main';
+@import './sass/header';
+@import './sass/search';
+@import './sass/suggest';
+@import './sass/trend';
