--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
-body {
-  margin: 0;
+* {
+  border: 0;
   padding: 0;
   margin: 0; }
+
+header .topbar {
+  background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+  box-shadow: 0 1px 0 0 #110038; }
