--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -6,3 +6,20 @@
 body{
     background: #FFF4FD;
 }
+a{
+    text-decoration: none;
+}
+
+.sub-title {
+    background: #FFFAFE;
+    border: 1px solid #E6BBE2;
+    box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
+    padding: 6px;
+    
+}
+.inline{
+    display: inline;
+}
+button{
+    cursor: pointer;
+}
