--- a/sass/_suggest.scss
+++ b/sass/_suggest.scss
@@ -1,11 +1,62 @@
 .suggest {
     margin: 0 9.7% 64px 6.9%;
 
-    .sub-title {
-        background: #FFFAFE;
-        border: 1px solid #E6BBE2;
-        box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
-        padding: 6px;
-        
+    .suggest-container {
+        margin-top: 16px;
+        display: flex;
+        justify-content: space-between;
+
+        .suggest-container-gifbox {
+            display: flex;
+            flex-direction: column;
+            width: 23%;
+            background: #E6E6E6;
+            box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+            box-sizing: border-box;
+            padding: 1px;
+
+            .suggest-title {
+                margin: 2px;
+                background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+                color: white;
+                padding-left: 5px;
+                height: 20px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                img{
+                    margin: 2px;
+                }
+            }
+
+            .suggest-gifbox {
+                position: relative;
+                display: flex;
+                justify-content: center;
+
+                a {
+                    text-decoration: none;
+                    color: white;
+                    position: absolute;
+                    bottom: 15px;
+                    left: 7px;
+                    padding: 10px;
+                    background: #4180F6;
+                    border: 1px solid #4C2F99;
+                    box-shadow: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
+                }
+
+                img {
+                    width: 100%;
+                    height: 280px;
+                    margin: 2px;
+                }
+            }
+        }
+
+        div .suggest-tag {
+            display: inline;
+        }
     }
+
 }
