--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,5 @@
-@import './sass/variables';
-@import './sass/main';
-@import './sass/header';
-@import './sass/search';
-@import './sass/suggest';
-@import './sass/trend';
+@import './sass/day/main';
+@import './sass/day/header';
+@import './sass/day/search';
+@import './sass/day/suggest';
+@import './sass/day/trend';
