--- a/sass/day/_main.scss
+++ b/sass/day/_main.scss
@@ -3,23 +3,22 @@
     padding: 0;
     margin: 0;
 }
-body{
+.day{
     background: #FFF4FD;
-}
-a{
-    text-decoration: none;
-}
-
 .sub-title {
     background: #FFFAFE;
     border: 1px solid #E6BBE2;
     box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
     padding: 6px;
-    
 }
-.inline{
-    display: inline;
+}
+a{
+    text-decoration: none;
 }
 button{
     cursor: pointer;
+    outline: none;
+}
+.inline{
+    display: inline;
 }
