--- a/styles.css
+++ b/styles.css
@@ -3,23 +3,23 @@
   padding: 0;
   margin: 0; }
 
-body {
+.day {
   background: #FFF4FD; }
+  .day .sub-title {
+    background: #FFFAFE;
+    border: 1px solid #E6BBE2;
+    box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
+    padding: 6px; }
 
 a {
   text-decoration: none; }
 
-.sub-title {
-  background: #FFFAFE;
-  border: 1px solid #E6BBE2;
-  box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
-  padding: 6px; }
+button {
+  cursor: pointer;
+  outline: none; }
 
 .inline {
   display: inline; }
-
-button {
-  cursor: pointer; }
 
 header .topbar {
   padding-left: 0.6%;
@@ -48,13 +48,14 @@ header nav {
         border: 1px solid #110038;
         box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
         padding: 9px 26.5px;
-        width: 10%;
+        width: 25%;
         text-decoration: none; }
       header nav .menu li .theme-menu {
         position: absolute;
-        top: 28px;
+        top: 38px;
         width: 100%;
         height: 102px;
+        padding-top: 5px;
         display: none;
         justify-content: space-around;
         flex-direction: column;
@@ -62,10 +63,20 @@ header nav {
         box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
         header nav .menu li .theme-menu button {
           height: 36px;
-          margin: 10px;
+          width: 85%;
+          margin: 5px 10px;
+          padding: 7px 16px 7px 16px;
           background: #FFF4FD;
           border: 1px solid #CCA6C9;
           box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF; }
+        header nav .menu li .theme-menu .button-day-bg {
+          background: #FFF4FD;
+          border: 1px solid #CCA6C9;
+          box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF; }
+        header nav .menu li .theme-menu .button-night-bg {
+          background: #F0F0F0;
+          border: 1px solid #808080;
+          box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF; }
       header nav .menu li .nav-button:hover {
         border: 1px solid #110038 !important; }
       header nav .menu li .my-gifs {
@@ -74,33 +85,40 @@ header nav {
           border: 1px solid #110038; }
         header nav .menu li .my-gifs .underline-m {
           text-decoration: underline; }
-    header nav .menu .flex {
-      display: flex; }
-      header nav .menu .flex .nav-button {
-        width: 60%; }
-      header nav .menu .flex .dropdown {
+    header nav .menu .theme-select {
+      display: flex;
+      width: 27%; }
+      header nav .menu .theme-select .dropdown {
+        padding-left: 10px;
         display: flex;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
-        width: 36px;
+        width: 100%;
         height: 36px;
         background: #F7C9F3;
         border: 1px solid #110038;
         box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF; }
+        header nav .menu .theme-select .dropdown:focus {
+          outline: none; }
+        header nav .menu .theme-select .dropdown img {
+          padding: 14px 6px 14px 10px;
+          border-left: 1px solid black; }
 
 .search-container {
   margin: 0 9.7% 64px 6.9%;
   height: 99px;
   background: #E6E6E6;
-  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
+  box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  padding-top: 1px; }
   .search-container p {
     background-image: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
     color: white;
+    margin: 2px;
     padding-left: 6px; }
-  .search-container form {
+  .search-container .search {
     padding-left: 15px;
     padding-right: 18px; }
-    .search-container form input {
+    .search-container .search input {
       height: 48px;
       width: 88.08%;
       padding-left: 6px;
@@ -108,12 +126,64 @@ header nav {
       background: #FFFFFF;
       border: 1px solid #979797;
       box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000; }
-    .search-container form button {
+    .search-container .search button {
       background: #E6E6E6;
       border: 1px solid #808080;
       box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
       width: 10%;
-      height: 36px; }
+      height: 36px;
+      color: #B4B4B4; }
+      .search-container .search button img {
+        color: #B4B4B4; }
+    .search-container .search .search-active {
+      background: #F7C9F3;
+      border: 1px solid #110038;
+      box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+      color: #110038; }
+  .search-container .search-suggest-container {
+    width: 100%;
+    height: 160px;
+    position: relative;
+    z-index: 1;
+    display: none;
+    flex-direction: column;
+    background: #E6E6E6;
+    box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
+    .search-container .search-suggest-container .suggest2,
+    .search-container .search-suggest-container .suggest3 {
+      font-family: ChakraPetch-Regular;
+      font-size: 16px;
+      color: #110038;
+      letter-spacing: 0;
+      line-height: 22px;
+      text-align: left;
+      padding-left: 16px;
+      width: 86.4%;
+      height: 36px;
+      background: #F0F0F0;
+      border: 1px solid #808080;
+      box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF; }
+    .search-container .search-suggest-container .suggest2 {
+      margin: 11px 16px;
+      margin-right: 0; }
+    .search-container .search-suggest-container .suggest3 {
+      margin: 10px 0 16px 16px; }
+    .search-container .search-suggest-container .suggest1 {
+      font-family: ChakraPetch-Regular;
+      font-size: 16px;
+      color: #110038;
+      letter-spacing: 0;
+      line-height: 22px;
+      padding-left: 16px;
+      text-align: left;
+      margin-left: 16px;
+      margin-top: 17px;
+      width: 86.4%;
+      height: 36px;
+      border: 1px dotted #110038;
+      background: #DBDBDB;
+      border: 1px solid #808080;
+      box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF; }
 
 .suggest {
   margin: 0 9.7% 64px 6.9%; }
